k8s/testdata/vap/request1 policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "force-ha-in-prod unless testuser is deploying into testnamespace"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  validations:
  - expression: 'object.spec.replicas >= 3 || ((request.userInfo.username == "testuser") && (request.namespace == "testNamespace"))'
    message: "All production deployments should be HA with at least three replicas"
